Re-arranging the product image to prevent wrapping popup triggers.

--- a/app/assets/stylesheets/modules-tables.css.scss
+++ b/app/assets/stylesheets/modules-tables.css.scss
@@ -184,14 +184,17 @@ th {
     padding: 0 0 0 11px;
     font-weight: bold;
   }
-  > .product-image {
+  .product-image {
+    float: left;
     width: 75px;
+    height: 75px;
     padding-right: 0;
+    margin-right: 10px;
 
     > img {
       display: block;
-      width: 75px;
-      max-width: none;
+      max-width: 75px;
+      max-height: 75px;
       @include border-radius(5px);
     }
   }
